# mblt-model-zoo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  SKILLS.md  implementation_plan.md  pyproject.toml  requirements.txt  setup.py  test_batch.py
.agent/rules/: code-style.md  comment-style.md  git.md  md-style.md
.agents/skills/mblt-model-zoo/: SKILL.md
.agents/skills/mblt-transformers/: SKILL.md
.agents/skills/mblt-vision/: SKILL.md
.claude/skills/mblt-model-zoo/: SKILL.md
.claude/skills/mblt-transformers/: SKILL.md
.claude/skills/mblt-vision/: SKILL.md
.github/workflows/: code-review.yml  publish.yml
benchmark/: README.md  benchmark_text_generation_models.py
benchmark/common/: argparse_utils.py  chart_utils.py  dataset_utils.py  io_utils.py  math_utils.py  runtime_utils.py  summary_utils.py
benchmark/transformers/: README.md  asr_metrics.py  asr_output_utils.py  asr_pipeline_utils.py  asr_qwen_utils.py  benchmark_automatic_speech_recognition_models.py  benchmark_image_text_to_text_models.py  benchmark_target_utils.py  benchmark_text_generation_models.py  chart_utils.py  compare_benchmark_results.py  compare_metrics.py  plot_compare_benchmark_results.py  prefill_chunk_size.csv  search_npu_prefill_chunk_size.py  search_prefill_chunk_size.py  update_npu_prefill_chunk_size_configs.py  update_prefill_chunk_size_configs.py
benchmark/vision/: README.md  benchmark_coco.py  benchmark_dota.py  benchmark_imagenet.py  benchmark_vision_models.py  compare_benchmark_results.py  organize_ade20k.py  organize_cityscapes.py  organize_coco.py  organize_dotav1.py  organize_imagenet.py  organize_nyu_depth.py  organize_widerface.py  plot_compare_benchmark_results.py
compile/: README.md
compile/vision/: README.md  make_coco_subset.py  make_dotav1_subset.py  make_imagenet_subset.py  make_widerface_subset.py  vision_model_compile.py
mblt_model_zoo/: __init__.py
mblt_model_zoo/MeloTTS/: README.md  __init__.py  api.py  app.py  commons.py  download_utils.py  main.py  models.py  split_utils.py  utils.py
mblt_model_zoo/MeloTTS/text/: __init__.py  cleaner.py  english.py  japanese.py  korean.py
mblt_model_zoo/cli/: _vision.py  chat.py  compile.py  main.py  melo.py  melo_ui.py  predict.py  tps.py  transformers_compat.py  val.py
mblt_model_zoo/compile/: __init__.py  vision.py
mblt_model_zoo/hf_transformers/: README.md
mblt_model_zoo/hf_transformers/large_language_model/: __init__.py  bert.py  cohere2.py  exaone.py  exaone4.py  llama.py  qwen2.py
mblt_model_zoo/hf_transformers/speech_to_text/: whisper.py
mblt_model_zoo/hf_transformers/utils/: __init__.py  api.py  base_utils.py  benchmark_cli_common.py  benchmark_utils.py  cache_utils.py  configuration_utils.py  eagle3_utils.py  generation_utils.py  modeling_utils.py
mblt_model_zoo/hf_transformers/vision_language_model/: aya_vision.py  blip.py  qwen2_vl.py
mblt_model_zoo/stt/: __init__.py
mblt_model_zoo/stt/utils/: MobilintCache.py  __init__.py
mblt_model_zoo/stt/whisper/: MobilintWhisperForConditionalGeneration.py  __init__.py  prepare.py
mblt_model_zoo/transformers/: README.md  __init__.py  _api.py
mblt_model_zoo/transformers/large_language_model/: __init__.py  bert.py  cohere2.py  exaone.py  exaone4.py  llama.py  llama_batch.py  qwen2.py
mblt_model_zoo/transformers/speech_to_text/: whisper.py
mblt_model_zoo/transformers/text_to_speech/: __init__.py  melo.py
mblt_model_zoo/transformers/utils/: __init__.py  _api.py  auto.py  cache_utils.py  generation_utils.py  model_utils.py  types.py
mblt_model_zoo/utils/: core_mode.py  device_tracker.py  device_tracker_gpu.py  device_tracker_npu.py  device_tracker_npu.sh  downloads.py  logging.py  melotts_download.py  npu_backend.py  power_tracker.py  power_tracker_gpu.py  power_tracker_npu.py  power_tracker_npu.sh  unidic_download.py
mblt_model_zoo/vision/: README.md  __init__.py  _api.py  _compat.py  _model_aliases.py  _model_paths.py  wrapper.py
mblt_models/vision/: wrapper.py
scripts/: debug_whisper_beam_trace.py  test_transformers_matrix.py
tests/: conftest.py  npu_backend_options.py  test_cli_tps.py  test_cli_transformers_compat.py  test_cli_vision.py  test_npu_sweep_specs.py  test_transformers_runtime_compat.py
tests/MeloTTS/: TEST.md  test_melo.py
tests/transformers/: TEST.md  _fake_mxq.py  conftest.py  test_aya.py  test_benchmark_transformers_cli.py  test_bert.py  test_blip.py  test_cache_utils.py  test_cli_tps.py  test_cli_transformers_compat.py  test_clova.py  test_cohere2.py  test_compare_metrics.py  test_exaone.py  test_exaone4.py  test_exaone_deep.py  test_generation_limits.py  test_legacy_vlm_config.py  test_llama.py  test_llama_batch.py  test_logits_to_keep.py  test_melo.py  test_mirror_output_fields.py  test_qwen.py  test_qwen2.py  test_qwen2_eagle3_config.py  test_qwen2_vl.py  test_qwen3_vl_compat.py  test_subconfig_core_mode_propagate.py  test_tps_cli_subconfig_mxq_device_defaults.py  test_transformers_api.py  test_upstream_positional_params.py  test_vlm_benchmark_subconfig_result_keys.py  test_whisper.py  transformers_compat.py  utils.py
tests/tutorial/: test_aya.py  test_bert.py  test_blip.py  test_clova.py  test_cohere2.py  test_exaone.py  test_exaone4.py  test_exaone_deep.py  test_llama.py  test_qwen2_vl.py  test_resnet50.py  test_whisper.py  test_yolo.py
tests/utils/: edit_anchorless_yolo_onnx.py
tests/vision/: TEST.md  bench_resnet50.py  test_api.py  test_benchmark_vision.py  test_cli_vision.py  test_compile_vision.py  test_dataset_organizer.py  test_depth_estimation.py  test_face_detection.py  test_image_classification.py  test_imagenet_labels.py  test_model_dataset_metadata.py  test_mxq_classification.py  test_onnx_classification.py  test_onnx_yolo.py  test_package_exports.py  test_postprocess_builder.py  test_postprocess_hierarchy.py  test_resnet50.py  test_results_plot.py  test_semantic_segmentation.py  test_vision_api.py  test_wrapper_aliasing.py  test_wrapper_download.py  test_yolo.py  test_yolo_det.py  test_yolo_pose.py  test_yolo_seg.py
tests/vision/benchmark/: README.md  (+3 more)
(+686 files in other folders)
