[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"


# Project setting -----------------------------
[project]
name = "mblt-model-zoo"
authors = [
    {"name" = "Mobilint Inc.", email = "tech-support@mobilint.com"},
]
dynamic = ["version"]
description = "A codebase for pre-quantized AI models for Mobilint NPUs."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9,<3.13"
keywords = ["quantization", "NPU", "model zoo", "pre-quantized models", "inference", "mobilint", "mblt", "aries", "regulus", "qb"]
dependencies = [
    "mobilint-qb-runtime>=1.0.0",
    "numpy>=1.26.0",
    "torch>=2.4.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "setuptools>=70.0.0",
    "faster_coco_eval",
    "huggingface_hub",
    "scipy",
    "tqdm",
    "wheel",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Home = "https://www.mobilint.com/"
Repository  = "https://github.com/mobilint/mblt-model-zoo"

[project.scripts]
mblt-model-zoo = "mblt_model_zoo.cli:main"
mblt-melotts-download = "mblt_model_zoo.utils.melotts_download:main"

[project.optional-dependencies]
transformers = [
    "transformers[serving]>=4.54.0, <=4.57.1",
    "sentencepiece",
    "torchvision",
    "matplotlib",
]
MeloTTS = [
    "transformers>=4.54.0, <=4.57.1",
    "g2p_en>=2.1.0",
    "anyascii>=0.3.2",
    "jamo>=0.4.1",
    "g2pkk>=0.1.1",
    "unidic>=1.1.0",
    "python-mecab-ko>=1.3.7",
    "soundfile",
    "gradio",
    "click",
    "eunjeon",
]

# Tools setting -----------------------------------------
[tool.setuptools]
packages = { find = { where = ["."], include = ["mblt_model_zoo","mblt_model_zoo.*"] } }

[tool.setuptools.dynamic]
version = { attr = "mblt_model_zoo.__version__" }

[tool.setuptools.package-data]
"mblt_model_zoo" = [
    "MeloTTS/text/cmudict.rep",
    "MeloTTS/text/cmudict_cache.pickle"
]

[tool.uv.sources]
qbruntime = { path = "qbruntime-0.0.0+c0c8f4ec-cp310-cp310-manylinux_2_31_x86_64.whl" }

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-timeout>=2.4.0",
    "datasets>=3.2.0, <=3.6.0",
    "librosa>=0.11.0, <=0.11.0",
    "numba>=0.60.0, <=0.60.0",
    "hf_xet",
]
